<resources>
    <string name="app_name">My Application</string>
    <string name="new_Activity_label">New Activity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="back_button_label">BACK</string>
    <string name="fwd_button_label">FWD</string>
    <string name="start_service">start service</string>
    <string name="stop_service">Stop Service</string>
    <string name="bind_service">Bind Service</string>
    <string name="unbind_service">UnBind service</string>
    <string name="bounded_activity">Bounded Activity</string>
    <string name="insert">Insert Record</string>
    <string name="get_one_record">Get one record</string>
    <string name="get_all_records_on_attr">Records on attribute</string>
    <string name="dbactivity">Database Activity</string>
    <string name="main_activity_label">Main Activity</string>
    <string name="third_activity_label">Third Activity</string>
    <string name="get_all_records_on_attr_from_cursor">Get All values on attr from cursor</string>
</resources>
