<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/db_activity_liner_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">


    <Button
        android:id="@+id/insert"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="onInsertClick"
        android:text="@string/insert" />

    <Button
        android:id="@+id/get_one_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="ongetOneRecordClick"
        android:text="@string/get_one_record" />

    <Button
        android:id="@+id/get_all_records_on_attr"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="ongetAllRecord"
        android:text="@string/get_all_records_on_attr" />
    <Button
        android:id="@+id/get_all_records_on_attr_via_cursor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="onGetAllRecordsOnBasisOfAttrViaCursor"
        android:text="@string/get_all_records_on_attr_from_cursor"

        />
    <Button
        android:id="@+id/back_button_db_activity"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/back_button_label" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.17"
        android:text="Database Activity" />


    <ListView
        android:id="@+id/db_activity_list_view_array_adapter"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    </ListView>

    <ListView
        android:id="@+id/db_activity_list_view_cursor_adapter"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    </ListView>


</LinearLayout>