<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1">

    <Button

        android:layout_height="wrap_content"
        android:layout_width="277dp"
        android:text="@string/fwd_button_label"
        android:id="@+id/third_activity_fwd_button" />

    <TextView
        android:id="@+id/third_activity_text_view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="@dimen/abc_action_bar_content_inset_material"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/abc_action_bar_content_inset_material"
        android:layout_weight="0.12" />

    />

    <Button
        android:id="@+id/third_activity_back_button"
        android:layout_width="277dp"
        android:text="@string/back_button_label"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/third_activity_label"/>



</LinearLayout>